syntax = "proto3";
package schema.v2;

import "v2/block_core.proto";
import "v2/project_source.proto";

message ProjectGitSyncRequest {
  int32 project_generate_queue_id = 1;
  int32 project_id = 2;
  Git git = 3;
  ProjectSource project_source = 4;
  repeated string changed_files = 5;
  optional Action action_type = 6;
  repeated ProjectSourceConfiguration source_configurations = 7;

  enum Action {
		CODE_TO_ERD = 0;
		CODE_TO_NATURAL_LANGUAGE = 1;
	}
}

message ProjectGitSyncResponse {
  int32 project_generate_queue_id = 1;
  int32 project_id = 2;
  Module module = 3;
  Status status = 4;
  int32 token_usage = 5;
  repeated core.Block blocks = 6;
  string erds = 7;
  string error_message = 8;

  enum Module {
    CODE_TO_ERD = 0;
    CODE_TO_NATURAL_LANGUAGE = 1;
  }

  enum Status {
    SUCCEEDED = 0;
    INPROGRESS = 1;
    FAILED = 2;
  }
}
